--- a/IBIN/IBIN.csproj
+++ b/IBIN/IBIN.csproj
@@ -260,6 +260,7 @@
     <Content Include="Views\Species\_SpeciesList.cshtml" />
     <Content Include="Views\Shared\_UrlVariablesAdmin.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
