--- a/IBIN.BLL/IBIN.BLL.csproj
+++ b/IBIN.BLL/IBIN.BLL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ChemicalRepository.cs" />
     <Compile Include="SpeciesRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
