--- a/IBIN.DAL/IBIN.DAL.csproj
+++ b/IBIN.DAL/IBIN.DAL.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Category.cs">
+      <DependentUpon>IBIN.tt</DependentUpon>
+    </Compile>
     <Compile Include="Chemical.cs">
       <DependentUpon>IBIN.tt</DependentUpon>
     </Compile>
@@ -68,6 +71,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>IBIN.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Item.cs">
+      <DependentUpon>IBIN.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Species.cs">
