--- a/IBIN/IBIN.csproj
+++ b/IBIN/IBIN.csproj
@@ -277,6 +277,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="UploadedFiles\ChemicalFile\" />
+    <Folder Include="UploadedFiles\SpeciesFile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
